--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
         if: always()
       - name: build storybook
         run: npm run build-storybook
+        if: always()
       - name: screenshot testing
         run: npm run test:ui:ci
         if: always()
