--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:ui": "npx loki test",
     "test:ok": "npx loki approve",
+    "start:dev:server": "node ./json-server/index.js",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:json": "node scripts/generate-visual-json-report.js",
@@ -64,6 +65,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "json-server": "^0.17.3",
     "loki": "^0.28.1",
     "mini-css-extract-plugin": "^2.5.3",
     "reg-cli": "^0.17.7",
