--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
       - name: build storybook
         run: npm run build-storybook
         if: always()
-      - name: screenshot testing
-        run: npm run test:ui:ci
-        if: always()
+      # - name: screenshot testing
+      #   run: npm run test:ui:ci
+      #   if: always()
