--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "json-server": "^0.17.3",
     "loki": "^0.28.1",
     "mini-css-extract-plugin": "^2.5.3",
+    "prettier": "^2.7.1",
     "reg-cli": "^0.17.7",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
